--- a/my-vue-app/src/pages/stylesheets/Home.css
+++ b/my-vue-app/src/pages/stylesheets/Home.css
@@ -1,11 +1,14 @@
 .container{
-    box-sizing: border-box;
+    width: 100%;
 }
 
 .description-content{
     text-align: center;
+    
 }
-
+h1{
+    color: black;
+}
 
 .link-to-team{
     background-color: blueviolet;
@@ -38,8 +41,13 @@
     background-color: black;
     color:white;
     width: 100%;
-    height: 500px;
+    height: 50vh;
+    margin-top: 20px;
 }
 .contact-title{
     padding: 20px;
+    color: white;
+}
+button{
+    border: none;
 }
