--- a/my-vue-app/src/pages/stylesheets/Navbar.css
+++ b/my-vue-app/src/pages/stylesheets/Navbar.css
@@ -13,7 +13,7 @@
 }
 .navbar-link{
     display: block;
-    
+    border: none;
     width: 100%;
     text-align: center;
     text-decoration: none;
