--- a/my-vue-app/src/index.css
+++ b/my-vue-app/src/index.css
@@ -5,19 +5,26 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ffffff;
-
+  background-color: rgb(79, 187, 255);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+li{
+  list-style-type: none;
 }
 html, body{
   padding: 0;
   margin: 0;
-  height: 100%;
+  height: 0;
   width: 100%;
   
+}
+body{
+  background: rgb(2,0,36);
+  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(1,11,147,1) 51%, rgba(1,12,154,1) 54%, rgba(0,22,255,1) 100%);
 }
 button{
   cursor: pointer;
