--- a/my-vue-app/src/pages/stylesheets/Navbar.css
+++ b/my-vue-app/src/pages/stylesheets/Navbar.css
@@ -1,10 +1,16 @@
-.navbar-logo{
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+}
+.navbar-logo {
     padding-left: 20px;
     font-size: 36px;
-    transition: font-size 0.3s ease;
+    transition: all 0.3s ease;
 }
 .navbar-logo:hover{
-    font-size: 40px;
+    margin-left: 10px;
 }
 .navbar-body{
     display: flex;
@@ -12,26 +18,30 @@
     
 }
 .navbar-link{
-    display: block;
+    
     border: none;
-    width: 100%;
+    
+    
+    margin-right: 10px;
     text-align: center;
     text-decoration: none;
     font-size: 24px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   
 }
 .navbar-link button{
     display: block;
-    background-color: blueviolet;
+    padding: 10px;
+    border-radius: 6px;
+    background-color: rgb(79, 187, 255);
     color: white;
     width: 100%;
     text-align: center;
     text-decoration: none;
-    font-size: 24px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+    
     transition: background-color 0.3s ease;
 }
 .navbar-link button:hover{
-    background-color: rgb(71, 29, 110);
+    background-color: rgb(58, 139, 189);
     
 }
