--- a/my-vue-app/src/pages/stylesheets/Home.css
+++ b/my-vue-app/src/pages/stylesheets/Home.css
@@ -19,6 +19,9 @@
     
     text-align: center;
     color: white;
+    text-shadow: 1px 1px 2px black;
+    
+
 }
 .team-container{
     background-color: rgb(79, 187, 255);
