--- a/my-vue-app/src/pages/stylesheets/Research.css
+++ b/my-vue-app/src/pages/stylesheets/Research.css
@@ -1,9 +1,10 @@
 .research-title{
     padding: 20px;
-    background-color: rgb(79, 187, 255);
+    
     width: 100%;
-    text-align: center;
-    color: white;
+    text-align: left;
+    margin-left: 40px;
+    margin-bottom: 20px;
 }
 .research-list{
     padding: 20px;
