--- a/my-vue-app/src/pages/stylesheets/About.css
+++ b/my-vue-app/src/pages/stylesheets/About.css
@@ -7,3 +7,27 @@
     border-color: black;
     border-width: 0px 0px 3px 0px;
 }
+.dropdown-container{
+    border-style: solid;
+    border-color: black;
+    border-width: 3px;
+    padding: 20px;
+}
+.dropdown{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+.dropdown-toggle-button
+{
+    padding: 10px 30px 10px 30px;
+
+    background-color: rgb(79, 187, 255);
+    border-radius: 6px;
+
+
+}
+.dropdown-text{
+transition: all 0.3s ease
+}
