--- a/my-vue-app/src/pages/stylesheets/Navbar.css
+++ b/my-vue-app/src/pages/stylesheets/Navbar.css
@@ -10,7 +10,7 @@
     transition: all 0.3s ease;
 }
 .navbar-logo:hover{
-    margin-left: 40px;
+    margin-left: 10px;
 }
 .navbar-body{
     display: flex;
@@ -45,4 +45,9 @@
     color: white;
     background-color: rgb(79, 187, 255);
     
+}
+@media (max-width: 720px){
+    .navbar-link button{
+font-size: 16px;
+    }
 }
