--- a/my-vue-app/src/pages/stylesheets/Research.css
+++ b/my-vue-app/src/pages/stylesheets/Research.css
@@ -12,6 +12,26 @@
     border-radius: 6px;
     height: auto;
 }
+.research-link button{
+    
+    background-color: rgb(79, 187, 255);
+    color: white;
+    font-size: 16px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: white;
+    border-radius: 6px;
+    text-decoration: none;
+    margin-right: 20px;
+    width: 100%;
+    padding: 20px;
+    font-size: 36px;
+    transition: all 0.3s ease;
+}
+.research-link button:hover{
+    background-color: rgb(58, 139, 189);
+    border-color: rgb(58, 139, 189);
+}
 .pub-title{
     background-color: rgb(50, 120, 164);
     border-radius: 6px;
@@ -66,4 +86,40 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
+}
+.page-numbers{
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+    margin-top:20px;
+    padding: 20px;
+    background-color: rgb(63, 148, 201);
+    border-radius: 6px;
+    margin-bottom: 20px;
+}
+.page-number{
+    padding: 20px;
+    background-color: rgb(79, 187, 255);
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease
+}
+.page-number:hover{
+    background-color: rgb(54, 127, 173);
+}
+a{
+    text-decoration: none;
+}
+
+@media(max-width: 960px){
+    #research-row{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    #sort-column{
+        width: 100%;
+    }
 }
