Adding description data and images.

--- a/my-vue-app/src/pages/stylesheets/Research.css
+++ b/my-vue-app/src/pages/stylesheets/Research.css
@@ -82,6 +82,14 @@
     color: white;
 
 }
+.search-bar{
+    color: white;
+    
+}
+.search-bar input{
+    margin-bottom: 20px;
+    width: 100%;
+}
 .button-items{
     display: flex;
     justify-content: space-between;
