--- a/my-vue-app/src/pages/stylesheets/About.css
+++ b/my-vue-app/src/pages/stylesheets/About.css
@@ -12,22 +12,39 @@
     border-color: black;
     border-width: 3px;
     padding: 20px;
+    
+        position: relative;
+        margin-bottom: 20px; 
+    
 }
-.dropdown{
+.dropdown {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
-.dropdown-toggle-button
-{
-    padding: 10px 30px 10px 30px;
 
+.dropdown h2 {
+    margin: 0;
+}
+
+.dropdown-toggle-button {
     background-color: rgb(79, 187, 255);
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    padding: 20px;
     border-radius: 6px;
-
-
 }
-.dropdown-text{
-transition: all 0.3s ease
+
+.dropdown-text {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0%;
+    transition: all 0.3s ease;
+}
+
+.dropdown-container.open .dropdown-text {
+    opacity: 100%;
+    max-height: 300px; 
 }
