--- a/my-vue-app/src/pages/stylesheets/Home.css
+++ b/my-vue-app/src/pages/stylesheets/Home.css
@@ -31,7 +31,7 @@
 
 }
 .team-container{
-    background-color: rgb(79, 187, 255);
+    background-color: #005073;
     padding: 20px;
     width: 95%; 
     
