--- a/my-vue-app/src/pages/stylesheets/Home.css
+++ b/my-vue-app/src/pages/stylesheets/Home.css
@@ -41,11 +41,9 @@
 }
 .research-container{
     margin-top: 20px;
-    background-color: rgb(79, 187, 255);
+    background-color: #005073;
     padding: 20px;
     width: 95%; 
-    
-
     margin-left: 2.5%;
     border-radius: 6px;
 }
@@ -217,7 +215,7 @@
 
 }
 .contact-section{
-    background-color: black;
+    background-color: #005073;
     color:white;
     width: 100%;
     height: 100%;
