--- a/my-vue-app/src/pages/stylesheets/About.css
+++ b/my-vue-app/src/pages/stylesheets/About.css
@@ -7,44 +7,6 @@
     border-color: black;
     border-width: 0px 0px 3px 0px;
 }
-.dropdown-container{
-    border-style: solid;
-    border-color: black;
-    border-width: 3px;
-    padding: 20px;
-    
-        position: relative;
-        margin-bottom: 20px; 
-    
-}
-.dropdown {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.dropdown h2 {
-    margin: 0;
-}
-
-.dropdown-toggle-button {
-    background-color: rgb(79, 187, 255);
-    border: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    border-radius: 6px;
-}
-
-.dropdown-text {
-    max-height: 0;
-    overflow: hidden;
-    opacity: 0%;
-    transition: all 0.3s ease;
-}
-
-.dropdown-container.open .dropdown-text {
-    opacity: 100%;
-    max-height: 300px; 
+#header{
+    font-weight: 750;
 }
