--- a/my-vue-app/src/pages/stylesheets/Navbar.css
+++ b/my-vue-app/src/pages/stylesheets/Navbar.css
@@ -2,12 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .navbar-logo {
     padding-left: 50px;
-    font-size: 36px;
     transition: all 0.3s ease;
 }
 
@@ -17,7 +15,7 @@
 
 .navbar-body {
     display: flex;
-    justify-content: space-evenly;
+    gap: 1rem;
     margin-right: 50px;
 }
 
@@ -27,23 +25,6 @@
     text-align: center;
     text-decoration: none;
     font-size: 24px;
-}
-
-.navbar-link button {
-    display: block;
-    padding: 20px;
-    background-color: white;
-    color: black;
-    width: 100%;
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    transition: background-color 0.3s ease;
-}
-
-.navbar-link button:hover {
-    color: white;
-    background-color: rgb(79, 187, 255);
 }
 
 @media (max-width: 720px) {
