--- a/my-vue-app/src/pages/stylesheets/Research.css
+++ b/my-vue-app/src/pages/stylesheets/Research.css
@@ -1,94 +1,53 @@
 .research-title{
-    padding: 20px;
-    
+    margin-top: 20px; 
     width: 100%;
     text-align: left;
-    margin-left: 40px;
-    margin-bottom: 20px;
 }
 .research-list{
+    margin-top: 20px;
     padding: 20px;
-    background-color: rgb(63, 148, 201);
+    background-color: #066275;
     border-radius: 6px;
     height: auto;
 }
-.research-link button{
-    
-    background-color: rgb(79, 187, 255);
-    color: white;
-    font-size: 16px;
-    border-style: solid;
-    border-width: 3px;
-    border-color: white;
-    border-radius: 6px;
-    text-decoration: none;
-    margin-right: 20px;
-    width: 100%;
-    padding: 20px;
-    font-size: 36px;
-    transition: all 0.3s ease;
-}
-.research-link button:hover{
-    background-color: rgb(58, 139, 189);
-    border-color: rgb(58, 139, 189);
-}
+
 .pub-title{
-    background-color: rgb(50, 120, 164);
+    background-color: #0892ad;
     border-radius: 6px;
     padding: 20px;
     color: white;
 }
-.research-redirect-buttons{
+.link-to-research{
     display: flex;
     justify-content: end;
 }
-.research-redirect-button button{
-     
-    background-color: rgb(79, 187, 255);
-    color: white;
-    
-    border-style: solid;
-    border-width: 3px;
-    border-color: white;
-    border-radius: 6px;
-    text-decoration: none;
-    margin-right: 20px;
-    width: 100%;
-    padding: 20px;
-    font-size: 16px;
-    transition: all 0.3s ease;
-}
-.research-redirect-button button:hover{
-    background-color: rgb(58, 139, 189);
-    border-color: rgb(58, 139, 189);
-}
-.research-container h4{
-    color: white;
-}
-.research-container h5{
-    color: white;
-}
-.research-container p{
+.research-container h4, h5{
     color: white;
 }
 .filter-container{
     padding: 20px;
-    background-color: rgb(58, 139, 189);
+    background-color: #0892ad;
     height: auto;
     margin-top: 20px;
+    border-radius: 6px;
 }
-.filter-option{
-    background-color: rgb(63, 148, 201);
+#search-bar{
     color: white;
-
 }
-.search-bar{
-    color: white;
-    
-}
-.search-bar input{
+#search-bar input{
     margin-bottom: 20px;
     width: 100%;
+}
+#search-bar-toggle{
+    display: flex;
+    align-items: center;
+}
+#buttons{  
+    align-items: center;
+    gap: 10px;
+}
+#paper-container{
+    border-radius: 6px;
 }
 .button-items{
     display: flex;
@@ -102,32 +61,21 @@
     justify-content: space-evenly;
     margin-top:20px;
     padding: 20px;
-    background-color: rgb(63, 148, 201);
+    background-color: #066275;
     border-radius: 6px;
     margin-bottom: 20px;
 }
 .page-number{
     padding: 20px;
-    background-color: rgb(79, 187, 255);
+    background-color: #0dcaf0;
     color: white;
     border-radius: 6px;
     cursor: pointer;
     transition: all 0.3s ease
 }
 .page-number:hover{
-    background-color: rgb(54, 127, 173);
+    background-color: #0892ad;
 }
 a{
     text-decoration: none;
-}
-
-@media(max-width: 960px){
-    #research-row{
-        display: flex;
-        flex-direction: column;
-        
-    }
-    #sort-column{
-        width: 100%;
-    }
 }
