--- a/my-vue-app/src/pages/stylesheets/Team.css
+++ b/my-vue-app/src/pages/stylesheets/Team.css
@@ -1,10 +1,31 @@
 .team-title{
     margin-top: 20px;
     text-align: left;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 #profile-picture{
     object-fit: cover;
 }
-#team-cards{
-    box-shadow: 2px 2px 20px;
+#team-card-rows{
+    align-items: stretch;
+    
+}
+.grade-title{
+    padding: 20px;
+    background-color: #0892ad;
+    margin-bottom: 10px;
+}
+.team-card:hover{
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+.card-img-top{
+    border-radius: 0px;
 }
