--- a/my-vue-app/src/pages/stylesheets/Home.css
+++ b/my-vue-app/src/pages/stylesheets/Home.css
@@ -10,6 +10,16 @@
     height: 500px;
     width: 100%;
 }
+#card-container{
+    border-style: solid;
+    border-width: 0 0 10px 0;
+    border-color: #066275;
+    
+}
+#field-cards{
+    object-fit: cover;
+    height: 300px;
+}
 .thumbnail{
     height: 100%;
     width: 100%;
@@ -18,7 +28,11 @@
     border-width: 3px;
     object-fit: cover;
 }
-
+#title-border{
+    border-style: solid;
+    border-color: inherit;
+    border-width: 0 0 2px 0;
+}
 .welcome-text {
     margin-bottom: 20px;
     color: white;
