Major update - Fixed responsiveness for research, team and homepage for mobile phones. Ensured that everything switches to column format on small devices.   Also made sure to change the research page format so that sorting and other links are on top of the publications list. - Created json file with data for FAQ questions to avoid hardcoding it on the about page. - Removed unnecessary images for smaller bundle size. - Added link below fields of study section that leads to the research page. - Added responsiveness to the navbar by setting a condition for the navbar to switch to a hamburger menu for smaller devices and hide the nav links within. - Refined UI theme with better colors.

--- a/my-vue-app/src/pages/stylesheets/Navbar.css
+++ b/my-vue-app/src/pages/stylesheets/Navbar.css
@@ -4,27 +4,18 @@
     align-items: center;
     font-family: 'Poppins', sans-serif;
 }
-
-.navbar-logo {
-    padding-left: 50px;
+.nav-item{
+    border-style: solid;
+    border-color: #066275;
+    border-width: 0;
     transition: all 0.3s ease;
-    
 }
-
+.nav-item:hover{
+    border-width: 0 0 3px 0;
+}
+.navbar-logo {
+    transition: all 0.3s ease;
+}
 .navbar-logo:hover {
     margin-left: 10px;
-}
-
-.navbar-body {
-    display: flex;
-    gap: 1rem;
-    margin-right: 50px;
-}
-
-.navbar-link {
-    border: none;
-    margin-right: 20px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 24px;
 }
