--- a/my-vue-app/src/pages/stylesheets/Home.css
+++ b/my-vue-app/src/pages/stylesheets/Home.css
@@ -47,4 +47,21 @@
     color: white;
     text-shadow: 1px 1px 2px black;
 }
-
+.footer-copyright{
+    background-color: #066275;
+}
+#explore-more-anchor{
+    display: flex;
+    gap: 20px;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+#explore-more-anchor:hover{
+    text-decoration: underline;
+    gap: 30px;
+    color: #066275;
+}
+#explore-more-anchor a:hover{
+    color: #066275;
+}
