--- a/my-vue-app/src/pages/stylesheets/Team.css
+++ b/my-vue-app/src/pages/stylesheets/Team.css
@@ -1,7 +1,7 @@
 .team-title{
     margin-top: 20px;
-    text-align: left;
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 20px;
 }
