Removed dropdown.jsx and changed nav links - Removed unnecessary dropdown.jsx file. - Changed the <a> tags to Link to work better with the react-router-dom and vercel. - Added window scroll side effect to reset page to the top upon redirecting to another page.

--- a/my-vue-app/src/pages/stylesheets/Home.css
+++ b/my-vue-app/src/pages/stylesheets/Home.css
@@ -36,7 +36,6 @@
 .welcome-text {
     margin-bottom: 20px;
     color: white;
-    
 }
 .welcome-text h1{
     font-family: 'Poppins', sans-serif;
@@ -53,9 +52,11 @@
 #explore-more-anchor{
     display: flex;
     gap: 20px;
-    color: black;
     text-decoration: none;
     transition: all 0.3s ease;
+}
+#explore-more-anchor a{
+    color: black;
 }
 #explore-more-anchor:hover{
     text-decoration: underline;
@@ -64,4 +65,14 @@
 }
 #explore-more-anchor a:hover{
     color: #066275;
+}
+@media (max-width: 480px){
+    #home-slideshow .carousel-inner{
+        height: 300px;
+    }
+    .thumbnail{
+       
+       object-fit: fill;
+       height: 50%;
+    }
 }
