New research paper cards and api functionality - Registered website with orcid to use the public API for automatically retrieving the professor's research papers. - Added new reset filter button so that users can reset back to the original list of papers and clear filters.

--- a/my-vue-app/src/pages/stylesheets/Research.css
+++ b/my-vue-app/src/pages/stylesheets/Research.css
@@ -28,6 +28,10 @@
     height: auto;
     margin-top: 20px;
 }
+.border-dark-info{
+    border-style: solid;
+    border-color: #066275;
+}
 #search-bar{
     color: white;
 }
@@ -35,8 +39,6 @@
     margin-bottom: 20px;
     width: 100%;
 }
-
-
 #paper-container{
     border-radius: 6px;
 }
